<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meetingapp.activities.CreateContactActivity">
    
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_create_contacts"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_create_contacts">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                android:hint="@string/lblFirstName"
                android:inputType="textPersonName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                android:hint="@string/lblLastName"
                android:inputType="textPersonName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                android:hint="@string/lblUsername"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                android:hint="@string/lblAddress"
                android:inputType="textPostalAddress"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                android:hint="@string/lblCity"/>
            <Spinner
                android:layout_width="352dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@+id/city"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:entries="@array/listOfStates"
                android:prompt="@string/statePrompt"
                android:id="@+id/states">
            </Spinner>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zipcode"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                android:hint="@string/lblZipCode"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lblCreateButton"
                android:id="@+id/btnCreateButton"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
